# langstage-jupyter

./: .env.example  .gitignore  CHANGELOG.md  README.md  hatch_build.py  install.json  package.json  pyproject.toml
.github/workflows/: test.yml  ui-tests.yml
deepagent_lab/: __init__.py  agent.py  agent_wrapper.py  config.py  launcher.py
jupyter-config/server-config/: langstage_jupyter.json
langstage_jupyter/: __init__.py  agent.py  agent_wrapper.py  agui_stream.py  config.py  handlers.py  launcher.py  notebook_tools.py
langstage_jupyter/labextension/: package.json
langstage_jupyter/labextension/static/: 3.8ee8588f174d86c5646b.js  344.fd47f5541c67ea0bc1dd.js  38.82587c55ac72ac5606d1.js  728.986a380a2d1400797eb6.js  remoteEntry.faa1b727ce969dcc4d0b.js  style.js
scripts/: check_labext_version.py
src/: handler.ts  index.ts  widget.tsx
style/: base.css
tests/: conftest.py  test_agent_wrapper.py  test_agui_stream.py  test_bug_regressions.py  test_canonical_config.py  test_config.py  test_dotenv_cwd.py  test_empty_body.py  test_health_readiness.py  test_labconfig.py  test_labext_version_guard.py  test_langgraph_utils.py  test_launcher.py  test_notebook_tools.py  test_readme_examples.py  test_rename_shim.py  test_reroot.py
ui-tests/: README.md  jupyter_server_test_config.py  package.json  playwright.config.js  stub_agent.py
ui-tests/tests/: langstage-jupyter.spec.ts
