[build-system]
requires = ["hatchling>=1.5.0", "jupyterlab>=4.0.0,<5", "hatch-nodejs-version"]
build-backend = "hatchling.build"

[project]
name = "langstage-jupyter"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11"
classifiers = [
    "Framework :: Jupyter",
    "Framework :: Jupyter :: JupyterLab",
    "Framework :: Jupyter :: JupyterLab :: 4",
    "Framework :: Jupyter :: JupyterLab :: Extensions",
    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    # The package IS a prebuilt JupyterLab extension and the headline launcher
    # runs `jupyter lab`, so JupyterLab is a hard runtime requirement — not just
    # a build dep. It was pinned only in [build-system].requires, so a clean
    # `pip install langstage-jupyter` left the user with no Lab UI and the
    # launcher dying on `jupyter-lab not found` (gh #24).
    "jupyterlab>=4.0.0,<5",
    "jupyter_server>=2.0.1,<3",
    "langgraph>=0.0.1",
    # >=0.6.11 carries describe(omit_keys=...) (so --show-config can hide the
    # inherited host/port rows this stage doesn't honor); also the agent-name
    # slugify fix (gh #23) and BOM-safe TOML.
    "langgraph-stream-parser>=0.6.11,<0.7",
    "python-dotenv>=0.19.0",
    "deepagents>=0.1.0",
    # Direct top-level imports in langstage_jupyter/agent.py. Previously only
    # available transitively (langchain via deepagents; requests via langsmith;
    # nbformat/jupyter_client/tornado via jupyter_server) — declared explicitly
    # so a minimal `pip install` cannot break on a transitive drop.
    "langchain>=1.0",
    "nbformat>=5.0",
    "requests>=2.25",
    "jupyter_client>=7.0",
    "tornado>=6.1",
]
dynamic = ["version", "description", "authors", "urls", "keywords"]

[project.scripts]
langstage-jupyter = "langstage_jupyter.launcher:main"
# Deprecated alias command — kept for one transition window.
deepagent-lab = "langstage_jupyter.launcher:main"

[project.optional-dependencies]
dev = [
    "jupyter_server[test]>=2.0.1,<3",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    # The experimental AG-UI path (ADR 0002); pulled into dev so CI exercises
    # tests/test_agui_stream.py instead of skipping it.
    "ag-ui-langgraph>=0.0.41",
    "fastapi",
]
agui = ["langgraph-stream-parser[agui]>=0.6.11,<0.7"]

[tool.hatch.version]
source = "nodejs"

[tool.hatch.metadata.hooks.nodejs]
fields = ["description", "authors", "urls"]

[tool.hatch.build.targets.wheel]
packages = ["langstage_jupyter", "deepagent_lab"]

[tool.hatch.build.targets.sdist]
artifacts = ["langstage_jupyter/labextension"]
exclude = [".github", "binder"]

[tool.hatch.build.targets.wheel.shared-data]
"langstage_jupyter/labextension" = "share/jupyter/labextensions/langstage-jupyter"
"install.json" = "share/jupyter/labextensions/langstage-jupyter/install.json"
"jupyter-config/server-config" = "etc/jupyter/jupyter_server_config.d"

[tool.hatch.build.hooks.version]
path = "langstage_jupyter/_version.py"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "langstage_jupyter/labextension/static/style.js",
    "langstage_jupyter/labextension/package.json",
]
skip-if-exists = ["langstage_jupyter/labextension/static/style.js"]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build:prod"
npm = ["jlpm"]

[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
build_cmd = "build:lib"
npm = ["jlpm"]
source_dir = "src"
build_dir = "lib"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
]
